﻿phpMyAdmin - ChangeLog
======================

3.4.1.0 (not yet released)
- bug #3301108 [interface] Synchronize and already configured host
- bug #3302457 Inline edit and $cfg['PropertiesIconic']
- Patch #3302313 Show a translated label
- bug #3300981 [navi] Table filter is case sensitive
- bug #3285929 [privileges] Revert temporary fix
- bug #3302872 [synchronize] Synchronize and user name

3.4.0.0 (2011-05-11)
+ rfe #2890226 [view] Enable VIEW rename 
+ rfe #838637 [privileges] Export a user's privileges 
- [core] Updated mootools to fix some glitches with Safari.
+ rfe #2816943 [interface] Add REGEXP ^...$ to select dialog.
+ rfe #2924956 [interface] Add insert ignore option to editing row.
+ rfe #2838080 [interface] Show warning when javascript is disabled.
+ rfe #2823707 [edit] Call UUID function separately to show it in insert.
+ rfe #2420684 [export] Allow export of timestamps in UTC.
+ [core] Remove config data from session as it brings chicken-egg problem.
+ [core] Cookie path now honors PmaAbsoluteUri.
+ rfe #2393597 [core] phpMyAdmin honors https in PmaAbsoluteUri.
+ rfe #1778337 [core] Try moving tables by RENAME and fail to CREATE/INSERT if that fails.
+ rfe #1721189 [core] Force reload js on code change.
+ rfe #1954161 [interface] Do not display long numbers in server status.
+ rfe #2033616 [edit] Add option to just display insert query.
+ rfe #1435032 [interface] Move SSL status to the end, it is usually empty.
+ rfe #1340812 [interface] Show numbers of columns in table structure.
+ rfe #1186511 [inrerface] Add link to reload navigation frame.
+ rfe #2936156 [auth] Signon authentication forwards error message through session data.
+ rfe #2835109 [interface] Move ^1 to the end of message.
+ rfe #854911  [interface] Grey out non applicable actions in structure 
+ [interface] Allow to create new table from navigation frame (in light mode).
+ rfe #1025696 [browse] Add direct download of binary fields.
- [browse] Properly display NULL value for BLOB.