@@ -8,6 +8,7 @@
 - bug #3300981 [navi] Table filter is case sensitive
 - bug #3285929 [privileges] Revert temporary fix
 - bug #3302872 [synchronize] Synchronize and user name
+- bug #3302733 [core] Some browsers report an insecure https connection
 
 3.4.0.0 (2011-05-11)
 + rfe #2890226 [view] Enable VIEW rename 
